Calculo de tiempos en cardviews. cancelacion de singleton, politica de reinicio y catch de errores

--- a/app/src/main/res/layout/quake_cardview.xml
+++ b/app/src/main/res/layout/quake_cardview.xml
@@ -52,7 +52,7 @@
             card_view:layout_constraintEnd_toEndOf="parent"
             card_view:layout_constraintTop_toTopOf="@+id/tv_ciudad"
             android:alpha="0.6"
-            tools:text="10:54pm"/>
+            tools:text="XX D X h"/>
 
         <TextView
             android:id="@+id/tv_referencia"
