--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,9 @@
 
     <include
         android:id="@+id/include"
-        layout="@layout/toolbar_layout" />
+        layout="@layout/toolbar_layout"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"/>
 
     <!-- Fragment de la lista de quakes -->
     <fragment
@@ -23,5 +25,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/include"
         tools:layout="@layout/fragment_quake" />
+
 
 </android.support.constraint.ConstraintLayout>
