--- a/app/src/main/res/drawable/circle_shape.xml
+++ b/app/src/main/res/drawable/circle_shape.xml
@@ -2,8 +2,10 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
 
-    <solid android:color="@android:color/darker_gray"/>
     <size android:width="100dp"
-        android:height="100dp"/>
+        android:height="100dp"
+        />
+    <corners android:radius="30dp" />
+    <solid android:color="@android:color/holo_blue_bright"/>
 
 </shape>
