--- a/app/src/main/res/layout/quake_cardview.xml
+++ b/app/src/main/res/layout/quake_cardview.xml
@@ -1,4 +1,4 @@
-<android.support.design.card.MaterialCardView
+<android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -7,6 +7,11 @@
     android:layout_height="72dp"
     android:layout_marginTop="4dp"
     android:layout_marginBottom="4dp"
+    card_view:cardCornerRadius="2dp"
+    android:animateLayoutChanges="true"
+    android:focusable="true"
+    android:clickable="true"
+    android:foreground="?attr/selectableItemBackground"
     style="@style/Widget.MaterialComponents.CardView"
     >
 
@@ -15,14 +20,14 @@
         android:layout_height="match_parent">
 
         <ImageView
-            android:id="@+id/circulo"
+            android:id="@+id/iv_mag_color"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_marginStart="16dp"
+            android:src="@drawable/circle_shape"
             android:layout_marginTop="16dp"
             card_view:layout_constraintStart_toStartOf="parent"
             card_view:layout_constraintTop_toTopOf="parent"
-            card_view:srcCompat="@drawable/circle_shape"
             android:contentDescription="@string/circulo_pintado" />
 
         <TextView
@@ -36,8 +41,8 @@
             android:fontFamily="@font/roboto"
             card_view:layout_constraintBottom_toTopOf="@+id/tv_referencia"
             card_view:layout_constraintEnd_toStartOf="@+id/tv_hora"
-            card_view:layout_constraintStart_toEndOf="@id/circulo"
-            card_view:layout_constraintTop_toTopOf="@+id/circulo"
+            card_view:layout_constraintStart_toEndOf="@id/iv_mag_color"
+            card_view:layout_constraintTop_toTopOf="@+id/iv_mag_color"
             android:alpha="0.87"
             tools:text="Nombre Ciudad"/>
 
@@ -63,7 +68,7 @@
             android:alpha="0.6"
             android:fontFamily="@font/roboto"
             android:maxLines="1"
-            card_view:layout_constraintBottom_toBottomOf="@+id/circulo"
+            card_view:layout_constraintBottom_toBottomOf="@+id/iv_mag_color"
             card_view:layout_constraintEnd_toEndOf="parent"
             card_view:layout_constraintStart_toStartOf="@+id/tv_ciudad"
             card_view:layout_constraintTop_toBottomOf="@+id/tv_ciudad"
@@ -79,11 +84,11 @@
             android:textStyle="normal"
             android:textColor="@android:color/white"
             android:fontFamily="@font/roboto"
-            card_view:layout_constraintBottom_toBottomOf="@+id/circulo"
-            card_view:layout_constraintEnd_toEndOf="@+id/circulo"
-            card_view:layout_constraintStart_toStartOf="@+id/circulo"
-            card_view:layout_constraintTop_toTopOf="@+id/circulo"
+            card_view:layout_constraintBottom_toBottomOf="@+id/iv_mag_color"
+            card_view:layout_constraintEnd_toEndOf="@+id/iv_mag_color"
+            card_view:layout_constraintStart_toStartOf="@+id/iv_mag_color"
+            card_view:layout_constraintTop_toTopOf="@+id/iv_mag_color"
             tools:text="9.5"/>
 
     </android.support.constraint.ConstraintLayout>
-</android.support.design.card.MaterialCardView>
+</android.support.v7.widget.CardView>
