--- a/app/src/main/res/layout/quake_cardview.xml
+++ b/app/src/main/res/layout/quake_cardview.xml
@@ -2,7 +2,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/cardView"
+    android:id="@+id/card_view"
     android:layout_width="match_parent"
     android:layout_height="72dp"
     android:layout_marginTop="4dp"
