Cambio de colores de sismos

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,13 +10,10 @@
 
 
     <!-- Colores para cada magnitud-->
-    <color name="magnitude1">#4A7BA7</color>
-    <color name="magnitude2">#04B4B3</color>
-    <color name="magnitude3">#10CAC9</color>
-    <color name="magnitude4">#F5A623</color>
-    <color name="magnitude5">#FF7D50</color>
-    <color name="magnitude6">#FC6644</color>
-    <color name="magnitude7">#E75F40</color>
-    <color name="magnitude8">#E13A20</color>
-    <color name="magnitude9plus">#D93218</color>
+    <color name="magnitude3">#F6BF65</color>
+    <color name="magnitude4">#EFA053</color>
+    <color name="magnitude5">#E88241</color>
+    <color name="magnitude6">#E1632F</color>
+    <color name="magnitude7">#DA451D</color>
+    <color name="magnitude8">#D4270C</color>
 </resources>
