Diseño de activity detalle

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    android:id="@+id/main_container">
+    android:id="@+id/main_container"
+    android:background="@color/grey">
 
     <include
         android:id="@+id/include"
