--- a/app/src/main/res/layout/activity_quake_details.xml
+++ b/app/src/main/res/layout/activity_quake_details.xml
@@ -1,15 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:fresco="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".QuakeDetailsActivity">
+    android:background="@color/grey"
+    tools:context=".QuakeDetailsActivity"
+    tools:layout_editor_absoluteY="25dp">
 
 
     <android.support.design.widget.AppBarLayout
-        android:id="@+id/app_bar"
+        android:id="@+id/app_bar_detail"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
@@ -19,7 +22,7 @@
 
         <android.support.v7.widget.Toolbar
 
-            android:id="@+id/tool_bar"
+            android:id="@+id/tool_bar_detail"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             app:layout_collapseMode="pin"
@@ -28,7 +31,7 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <ImageView
+    <com.facebook.drawee.view.SimpleDraweeView
         android:id="@+id/iv_map_quake"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -38,8 +41,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/app_bar"
-        app:srcCompat="@drawable/sismo" />
+        app:layout_constraintTop_toBottomOf="@+id/app_bar_detail"
+        fresco:placeholderImage="@drawable/foto" />
 
     <android.support.constraint.Guideline
         android:id="@+id/izquierda"
@@ -67,11 +70,9 @@
     <android.support.v7.widget.CardView
         android:id="@+id/card_view_detail"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
         app:cardElevation="2dp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/derecha"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/izquierda"
@@ -94,7 +95,7 @@
                 card_view:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/tv_ciudad"
+                android:id="@+id/tv_escala"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
@@ -104,13 +105,12 @@
                 android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                 android:textSize="16sp"
                 app:layout_constraintVertical_chainStyle="packed"
-                card_view:layout_constraintBottom_toTopOf="@+id/tv_referencia"
                 card_view:layout_constraintStart_toEndOf="@id/iv_mag_color"
                 card_view:layout_constraintTop_toTopOf="@+id/iv_mag_color"
                 tools:text="Nombre Escala" />
 
             <TextView
-                android:id="@+id/tv_referencia"
+                android:id="@+id/tv_sensible"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="16dp"
@@ -121,13 +121,13 @@
                 android:textSize="14sp"
                 card_view:layout_constraintBottom_toBottomOf="@+id/iv_mag_color"
                 card_view:layout_constraintEnd_toEndOf="parent"
-                card_view:layout_constraintStart_toStartOf="@+id/tv_ciudad"
-                card_view:layout_constraintTop_toBottomOf="@+id/tv_ciudad"
+                card_view:layout_constraintStart_toStartOf="@+id/tv_escala"
+                card_view:layout_constraintTop_toBottomOf="@+id/tv_escala"
                 tools:text="Sismo percibido por la comunidad" />
 
 
             <TextView
-                android:id="@+id/tv_magnitud"
+                android:id="@+id/tv_magnitud_detail"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/roboto"
@@ -148,15 +148,17 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
                 android:contentDescription="@string/icono_tiempo"
+                android:src="@drawable/ic_date"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/separador"
-                android:src="@drawable/ic_date" />
+                app:layout_constraintTop_toBottomOf="@+id/separador" />
 
             <View
                 android:id="@+id/separador"
                 android:layout_width="0dp"
                 android:layout_height="1dp"
                 android:layout_marginTop="16dp"
+                android:background="?attr/dividerHorizontal"
+                android:visibility="visible"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/iv_mag_color" />
@@ -165,7 +167,7 @@
                 android:id="@+id/tv_titulo_fecha"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
+                android:layout_marginStart="16dp"
                 android:alpha="0.87"
                 android:fontFamily="@font/roboto"
                 android:gravity="center"
@@ -178,40 +180,48 @@
             <TextView
                 android:id="@+id/tv_fecha"
                 android:layout_width="0dp"
-                android:layout_height="0dp"
+                android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
                 android:alpha="0.6"
                 android:fontFamily="@font/roboto"
                 android:textAppearance="@style/TextAppearance.AppCompat.Small"
                 android:textSize="12sp"
-                app:layout_constraintBottom_toBottomOf="@+id/iv_reloj"
                 app:layout_constraintEnd_toStartOf="@+id/guia_vertical"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="@+id/tv_titulo_fecha"
                 app:layout_constraintTop_toBottomOf="@+id/tv_titulo_fecha"
-                app:layout_constraintVertical_bias="0.0"
                 tools:text="22-14-2018 23:45:23" />
+
+            <android.support.constraint.Barrier
+                android:id="@+id/barrier"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                app:barrierDirection="bottom"
+                app:constraint_referenced_ids="tv_fecha,tv_epicentro"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <ImageView
                 android:id="@+id/iv_pin"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="16dp"
                 android:layout_marginBottom="16dp"
+                android:contentDescription="@string/icono_distancia"
                 android:visibility="visible"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/iv_reloj"
-                app:layout_constraintVertical_bias="0.49"
-                app:srcCompat="@drawable/ic_near_24dp"
-                android:contentDescription="@string/icono_distancia" />
+                app:layout_constraintTop_toTopOf="@+id/barrier"
+                app:srcCompat="@drawable/ic_near_24dp" />
 
             <TextView
                 android:id="@+id/tv_titulo_distancia"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
+                android:layout_marginStart="16dp"
                 android:alpha="0.87"
                 android:fontFamily="@font/roboto"
                 android:text="@string/distancia"
@@ -233,6 +243,7 @@
                 android:visibility="visible"
                 app:layout_constraintBottom_toBottomOf="@+id/iv_pin"
                 app:layout_constraintEnd_toStartOf="@+id/guia_vertical"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="@+id/tv_titulo_distancia"
                 app:layout_constraintTop_toBottomOf="@+id/tv_titulo_distancia"
                 tools:text="453 Km de aqui" />
@@ -253,19 +264,19 @@
                 android:layout_height="40dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
+                android:contentDescription="@string/icono_epicentro"
                 app:layout_constraintStart_toStartOf="@+id/guia_vertical"
                 app:layout_constraintTop_toBottomOf="@+id/separador"
-                card_view:srcCompat="@drawable/ic_adjust_24dp"
-                android:contentDescription="@string/icono_epicentro" />
+                card_view:srcCompat="@drawable/ic_adjust_24dp" />
 
             <TextView
                 android:id="@+id/tv_titulo_epicentro"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
+                android:layout_marginStart="16dp"
+                android:alpha="0.87"
                 android:fontFamily="@font/roboto"
                 android:text="@string/profundidad"
-                android:alpha="0.87"
                 android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                 android:textSize="16sp"
                 app:layout_constraintStart_toEndOf="@+id/iv_epicentro"
@@ -276,10 +287,10 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:layout_marginEnd="8dp"
+                android:alpha="0.6"
                 android:fontFamily="@font/roboto"
                 android:textAppearance="@style/TextAppearance.AppCompat.Small"
                 android:textSize="12sp"
-                android:alpha="0.6"
                 app:layout_constraintBottom_toBottomOf="@+id/iv_epicentro"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
