--- a/app/src/main/res/layout/quake_cardview.xml
+++ b/app/src/main/res/layout/quake_cardview.xml
@@ -5,10 +5,10 @@
     android:id="@+id/card_view"
     android:layout_width="match_parent"
     android:layout_height="72dp"
-    android:layout_marginTop="4dp"
     android:layout_marginBottom="4dp"
-    card_view:cardCornerRadius="2dp"
+    card_view:cardCornerRadius="4dp"
     android:animateLayoutChanges="true"
+    android:elevation="0dp"
     android:focusable="true"
     android:clickable="true"
     android:foreground="?attr/selectableItemBackground"
