--- a/app/src/main/res/layout/activity_quake_details.xml
+++ b/app/src/main/res/layout/activity_quake_details.xml
@@ -51,21 +51,22 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="8dp"
+        android:elevation="4dp"
+        app:cardCornerRadius="4dp"
         app:layout_constraintBottom_toTopOf="@+id/barrera_imagen"
         app:layout_constraintEnd_toStartOf="@+id/derecha"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/izquierda"
-        app:layout_constraintTop_toBottomOf="@+id/app_bar_detail"
-        app:cardCornerRadius="4dp"
-        android:elevation="4dp">
+        app:layout_constraintTop_toBottomOf="@+id/app_bar_detail">
 
-        <com.ortiz.touchview.TouchImageView
+        <ImageView
             android:id="@+id/iv_map_quake"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:contentDescription="@string/imagen_geografica_posicion_sismo"
             android:scaleType="centerCrop"
             tools:src="@drawable/placeholder" />
+
     </android.support.v7.widget.CardView>
 
 
@@ -125,16 +126,30 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
                 android:alpha="0.87"
                 android:fontFamily="@font/roboto"
                 android:maxLines="1"
                 android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                 android:textSize="16sp"
+                android:transitionName="ciudad"
+                app:layout_constraintEnd_toStartOf="@+id/tv_hora_detail"
                 app:layout_constraintVertical_chainStyle="packed"
                 card_view:layout_constraintStart_toEndOf="@id/iv_mag_color"
                 card_view:layout_constraintTop_toTopOf="@+id/iv_mag_color"
-                tools:text="Nombre Ciudad"
-                android:transitionName="ciudad" />
+                tools:text="Nombre Ciudad" />
+
+            <TextView
+                android:id="@+id/tv_hora_detail"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:layout_marginEnd="16dp"
+                android:alpha="0.6"
+                card_view:layout_constraintBottom_toBottomOf="@+id/tv_ciudad_detail"
+                card_view:layout_constraintEnd_toEndOf="parent"
+                card_view:layout_constraintTop_toTopOf="@+id/tv_ciudad_detail"
+                tools:text="XX D X h"
+                android:transitionName="hora" />
 
             <TextView
                 android:id="@+id/tv_referencia_detail"
